# scarecrow

./: .gitignore  README.md  pyproject.toml
scarecrow/: cli.py  io.py  mask.py  model.py  optimize.py
tests/: test_mask.py  test_model.py  test_optimize.py
