[project]
name = "scarecrow"
version = "0.1.0"
description = "Adversarial license plate frame pattern generator"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.11",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
ocr = ["easyocr>=1.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scarecrow = "scarecrow.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

