[project]
name = "scarecrow"
version = "0.1.0"
description = "An adversarial frame pattern optimizer for evading automated license plate recognition, personalized to your plate."
requires-python = ">=3.11"
license = "GPL-3.0-only"
authors = [{ name = "Max Harari" }]
dependencies = [
    "torch>=2.11",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
ocr = ["rapidocr-onnxruntime>=1.4"]

[project.urls]
Repository = "https://github.com/Meltedd/scarecrow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scarecrow = "scarecrow.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

